# lnb-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/lnb/: __init__.py  _auth.py  _exceptions.py  _http.py  _pagination.py  _retry.py  _types.py  client.py
src/lnb/models/: __init__.py  _base.py  api_version.py  batch.py  collection.py  fabric.py  file.py  inventory.py  invoice.py  order.py  pagination.py  price.py  product.py  retailer.py  sales_catalog.py  sales_document.py  selection.py  sizing.py
src/lnb/services/: __init__.py  _base.py  collections.py  fabrics.py  files.py  inventory.py  invoices.py  orders.py  prices.py  products.py  retailers.py  sales_catalogs.py  sales_documents.py  selections.py  sizings.py
tests/: conftest.py  test_auth.py  test_http.py  test_pagination.py
tests/services/: test_products.py
