[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnb-python"
version = "0.1.0"
description = "Python SDK for the Le New Black Wholesale API v2"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Le New Black" }]
keywords = ["lenewblack", "wholesale", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.5.0,<3.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.9",
    "hatch",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lnb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lnb --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/lnb"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
